examples/negative/mutable/param_hashmap_index_no_row.kai
# Negative fixture (Mutable contract — the dispatch-demand masking hole).
# Reading a `HashMap[K, V]` via the `m[key]` index sugar is an observable
# use of the `Mutable` effect that goes through RUNTIME DISPATCH: HashMap
# is built on `Ref`, so `hashmap.get` carries `/ Mutable` and dispatches
# through the evidence stack (unlike `array_get`, a direct C call). The
# `Mutable` effect is load-bearing — the default handler must be installed
# — so it can NEVER be masked away. A pure `Option[Int]` row must be
# rejected.
#
# Before the fix, the masking demand pass (`all_demands_local`) only
# inspected `EVar` callees (`array_set`, a user fn `/ Mutable`). The
# `m[key]` sugar desugars to `ECall(EModCall("hashmap", "get"), [m, key])`
# — an `EModCall`, NOT an `EVar` — so it fell through the match to the
# `_ -> true` "demand is local" branch. `mask_local_mutable_demand` then
# stripped `Mutable`, the body compiled clean, `main` never installed the
# default `Mutable` handler, and the program SEGFAULTED at the first
# `ref_get` inside `hashmap.get` (NULL evidence slot). The fix never masks
# a `Mutable` demand that flows through effect dispatch (a Ref op / a
# qualified `EModCall` carrying `/ Mutable`); only direct-C-call Array
# builtins stay maskable. So `Mutable` stays on the row and this program
# is rejected at compile time instead of crashing.

import collections.hashmap.{HashMap}

fn get_value_for(m: HashMap[String, Int], key: String) : Option[Int] = m[key]

fn main() : Unit / Console = {
  print("unreachable")
}
